src/App.scss
* {
  box-sizing: border-box;
}


html,
body {
background :black;
}



h3 {
  margin-bottom: 10px;
}



ul {
  list-style-type: none;
}


p {
  margin: 20px 0;
}

nav {
  width: 33%;
}

nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
}

nav ul li {
  color: var(--text-color);
  cursor: pointer;
  padding: 5px;
}

.text {
  .title {
    font-size: 10rem;
    text-align: center;
    width: 75%;
    margin: 0 auto;
    color: #fff;
  }
  @media only screen and (max-width: 600px) {
    .title {
      font-size: 5rem;
      text-align: center;
      width: 75%;
      margin: 0 auto;
      color: #fff;
    }
  
  }

  .container {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  
}


.hidden {
  display: none;
}
.about{
  margin-top: 5vh;
  z-index: 99 !important;
  padding: 4vw;
  padding-top: 0;
}

.abtMe{

  a {
    pointer-events: all;
    color: #ddd;
    text-decoration: none;
  }
  
  svg {
    fill: #ddd;
  }
  
  h1 {
    background: linear-gradient(30deg, #c850c0, #ffcc70);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }  
}
.anim {
  width: 99vw;
  height: 99vh;
  background-color: black;
}
#root {
  margin: 0;
  padding: 0;
  overflow: hidden;
}
.scrollArea {
  position: absolute;
  top: 0;
  left: 0;
  width: 100.3vw;
  height: 100vh;
  overflow: auto;
  overflow-x: hidden;

}

  

:root {
  --dark-bg: rgba(15, 15, 15, 0.95);
  --spacing: 350px;
}

.experience{


  main {
    width: 100vw;
    color: white;
    z-index: 99;
    position: absolute;
    width: 100%;
    margin: 0px auto;
    padding: 120px 0px;
    
    display: grid;
    grid-template-columns: repeat(12, 1fr);
  }


  header {
    background: var(--dark-bg);
    grid-column: 5 / span 5;
    font-size: 2rem;
    padding: 2.5rem;
    margin-top: 30vh;
    margin-bottom: 30vh;
  }
  
  section {
    grid-column: 2 / 8;
    padding: 1rem;
    background: var(--dark-bg);
    font-size: 1.25rem;
    line-height: 1.5;
    margin-bottom: var(--spacing);
  }
  
  blockquote {
    margin: 0;
    grid-column: 2 / span 9;
    margin-bottom: var(--spacing);
  
    p {
      color: black;
      background-color: white;
      font-size: 4rem;
      display: inline;
      line-height: 1.33;
    }
  
  }
  
  li {
    list-style-type: circle;
 }
 
  .left {
    grid-column: 6 / 12;
    }
  .center{
    grid-column: 5 / span 5;
  }

  @media only screen and (max-width: 600px) {
    section{
    grid-column: 3 / span 8 !important; 
    }
  }
}


@media only screen and (max-width: 600px) {
  .winbox{
    width: 75vw !important;
    height:50vh !important;
    top: 10vh !important;
    right:0vh !important;
    bottom:0vh !important;
    left: -60vw !important;
  }

}





.experience{


  main {
    width: 100vw;
    color: white;
    z-index: 99;
    position: absolute;
    width: 100%;
    margin: 0px auto;
    padding: 120px 0px;
    
    display: grid;
    grid-template-columns: repeat(12, 1fr);
  }


  header {
    background: var(--dark-bg);
    grid-column: 4 / span 6;
    font-size: 1.5rem;
    padding: 1.5rem;
    margin-top: 40vh;
    margin-bottom: 30vh;
  }
  
  section {
    grid-column: 1 /span 6;
    padding: 1rem;
    background: var(--dark-bg);
    font-size: 1rem;
    line-height: 1.5;
    margin-bottom: var(--spacing);
  }
  
  blockquote {
    margin: 0;
    grid-column: 2 / span 9;
    margin-bottom: var(--spacing);
  
    p {
      color: black;
      background-color: white;
      font-size: 4rem;
      display: inline;
      line-height: 1.33;
    }
  
  }
  
  
  .left {
    grid-column: 7 / span 12;
  }
  
}





.winbox.modern{
  animation: none !important;
}

.mainNav 

header {
  position: absolute;
  overflow: hidden;
  z-index: 99;
  width: 75%;
  padding: 2vw;
  .header-inner {
    display: flex;
    align-items: center;
    justify-content: space-between;
    .logo {
      font-weight: 900;
      letter-spacing: 2px;
      color: #fff;
    }
    nav {
      ul {
        margin: 0;
        padding: 0;
        display: flex;
        li {
          list-style: none;
          margin: 0 60px;
          &.btn {
            padding-right: 25%;
            a {
              color: #fff;
              font-weight: 600;
              background: #23232a;
              padding: 16px 24px;
              border-radius: 10px;
            }
          }
          a {
            text-transform: capitalize;
            text-decoration: none;
            color: #fff;
          }
        }
      }
    }
  }
}

.text .title {
  font-size: 6rem;
  text-align: center;
  width: 75%;
  margin: 0 auto;
  color: #fff;
  span {
    display: block;
  }
  @media (max-width: 1440px) {
    font-size: 3rem;
  }
}
.loader{

  .loading {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background: #171717;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    z-index: 1000;
  }
  
  .loading-bar-container {
    width: 100px;
    height: 32px;
    background: #272727;
  }
  
  .loading-bar {
    height: 32px;
    background: #00AAFF;
  }
  

}

#scroller{


  *,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

  main {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100%;
    background: #f0f0f0;
    transition: background 0.25s ease-in-out;
  }
  
  main.dark {
    background: #0c0c0c;
  }
  
  a {
    cursor: pointer;
    position: absolute;
    bottom: 25px;
    left: 50%;
    transform: translate3d(-50%, 0, 0);
  }
  
}


* {
  box-sizing: border-box;
}

html,
body,
#root,
.scroll {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

#root {
  overflow: auto;
}

@import url("https://rsms.me/inter/inter.css");


.scroll {
  position: absolute;
  top: 0;
  left: 0;
  overflow-y: auto;
  scroll-snap-type: y proximity;
}
/* ... */

